feature: se agrega el filtro de tipo de contrato y se modifica el filtro de proveedores. udistrital/Cumplidos_y_certificaciones_documentacion#143
